update intro notebook

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -7,12 +7,14 @@
    "source": [
     "# Example Jupyter Notebook\n",
     "\n",
-    "This is a `Markdown` cell. The contents of this cell are formated when you run them."
+    "This is a `Markdown` cell. The contents of this cell are formated when you run them. Run the cell by either clicking the `▶ Run` button above or by hitting `Shift+Enter`. \n",
+    "\n",
+    "For more information on Mark Down syntax, see [here](https://www.markdownguide.org/basic-syntax/)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "prime-pottery",
    "metadata": {},
    "outputs": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "protected-singer",
    "metadata": {},
    "outputs": [
@@ -44,18 +46,20 @@
        "42"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# You can evaluate a variable by just making a statement\n",
+    "# This is similar to the REPL tool, when just using `python` on the command line\n",
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "utility-world",
    "metadata": {},
    "outputs": [],
@@ -64,8 +68,11 @@
     "# %matplotlib notebook\n",
     "\n",
     "# Import the numpy and matplotlib modules to be used below\n",
+    "# This assumes you have installed the libraries already\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# When opening a notebook, all the cells need to be re-executed in the same order to produce the same results"
    ]
   },
   {
@@ -73,13 +80,11 @@
    "id": "pharmaceutical-pharmaceutical",
    "metadata": {},
    "source": [
-    "## Histograms\n",
+    "## Simple Plots\n",
     "\n",
-    "The `randint()` function returns an array of integers from a uniform distribution. Displaying this in a histogram, we should get a relatively flat graph with nearly equal numbers in each bucket.\n",
+    "The `randint()` function returns an array of integers from a uniform distribution. Displaying this in a histogram, we should get a relatively flat graph with nearly equal numbers in each bucket. Recall, that a histogram shows the frequency of occurances.\n",
     "\n",
-    "All the parameters for the `hist()` function can be found [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist).\n",
-    "\n",
-    "You must have the `numpy` and `matplotlib` functions installed already."
+    "All the parameters for the `hist()` function can be found [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist)."
    ]
   },
   {
@@ -150,14 +155,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "armed-commander",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "every-individual",
    "metadata": {},
@@ -189,14 +186,6 @@
     "my_ints = np.random.triangular(-3, 0, 8, 100000)\n",
     "h = plt.hist(my_ints, bins=50, color='lime')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "statutory-future",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
