pandas | add some more examples of dataframe properties

--- a/weather.ipynb
+++ b/weather.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "heavy-sharing",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "[24560 rows x 26 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "industrial-proxy",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "[4 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "geological-torture",
    "metadata": {},
    "outputs": [
@@ -699,12 +699,14 @@
     "Even more detailed information is available from the `DataFrame.info()` function. This function gives a summary with information like the shape, the column names and types data in the object.\n",
     "\n",
     "\n",
-    "The amount of data in the `DataFrame` can [affect what data is displayed](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.info.html), such as whether the non-null counts are shown."
+    "The amount of data in the `DataFrame` can [affect what data is displayed](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.info.html), such as whether the non-null counts are shown.\n",
+    "\n",
+    "There are also basic properties like `DataFrame.index` and `DataFrame.columns` to view row and column labels, respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "deadly-effects",
    "metadata": {},
    "outputs": [
@@ -750,6 +752,204 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "governmental-maldives",
+   "metadata": {},
+   "source": [
+    "You can use `DataFrame.dtypes` to see the types of each of the columns. Where the values are mixed types or Strings, the reported type will be `object`. \n",
+    "\n",
+    "Using this information, the method `DataFrame.select_dtypes()` can be used to return a new `DataFrame` that has only certain columns you choose to `include` or `exclude`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "liable-montreal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                     int64\n",
+       "Date                          object\n",
+       "Max.TemperatureF               int64\n",
+       "Mean.TemperatureF            float64\n",
+       "Min.TemperatureF               int64\n",
+       "Max.Dew.PointF                 int64\n",
+       "MeanDew.PointF                 int64\n",
+       "Min.DewpointF                  int64\n",
+       "Max.Humidity                   int64\n",
+       "Mean.Humidity                  int64\n",
+       "Min.Humidity                   int64\n",
+       "Max.Sea.Level.PressureIn     float64\n",
+       "Mean.Sea.Level.PressureIn    float64\n",
+       "Min.Sea.Level.PressureIn     float64\n",
+       "Max.VisibilityMiles          float64\n",
+       "Mean.VisibilityMiles         float64\n",
+       "Min.VisibilityMiles          float64\n",
+       "Max.Wind.SpeedMPH              int64\n",
+       "Mean.Wind.SpeedMPH             int64\n",
+       "Max.Gust.SpeedMPH            float64\n",
+       "PrecipitationIn               object\n",
+       "CloudCover                   float64\n",
+       "Events                        object\n",
+       "WindDirDegrees.br...          object\n",
+       "city                          object\n",
+       "season                        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "unlimited-designer",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>PrecipitationIn</th>\n",
+       "      <th>Events</th>\n",
+       "      <th>WindDirDegrees.br...</th>\n",
+       "      <th>city</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1948-07-01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Fog</td>\n",
+       "      <td>264&lt;br /&gt;</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1948-07-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>315&lt;br /&gt;</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1948-07-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>203&lt;br /&gt;</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1948-07-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Fog</td>\n",
+       "      <td>198&lt;br /&gt;</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1948-07-05</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Fog-Rain-Thunderstorm</td>\n",
+       "      <td>218&lt;br /&gt;</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date PrecipitationIn                 Events WindDirDegrees.br...  \\\n",
+       "0  1948-07-01            0.00                    Fog            264<br />   \n",
+       "1  1948-07-02            0.00                    NaN            315<br />   \n",
+       "2  1948-07-03            0.00                    NaN            203<br />   \n",
+       "3  1948-07-04            0.00                    Fog            198<br />   \n",
+       "4  1948-07-05            0.00  Fog-Rain-Thunderstorm            218<br />   \n",
+       "\n",
+       "                  city  season  \n",
+       "0  New York City (USA)  Summer  \n",
+       "1  New York City (USA)  Summer  \n",
+       "2  New York City (USA)  Summer  \n",
+       "3  New York City (USA)  Summer  \n",
+       "4  New York City (USA)  Summer  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Since select_dtypes() returns a new DataFrame, you can chain on a call to head()\n",
+    "df.select_dtypes(include=['object']).head(n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "extended-shuttle",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[RangeIndex(start=0, stop=24560, step=1),\n",
+       " Index(['Unnamed: 0', 'Date', 'Max.TemperatureF', 'Mean.TemperatureF',\n",
+       "        'Min.TemperatureF', 'Max.Dew.PointF', 'MeanDew.PointF', 'Min.DewpointF',\n",
+       "        'Max.Humidity', 'Mean.Humidity', 'Min.Humidity',\n",
+       "        'Max.Sea.Level.PressureIn', 'Mean.Sea.Level.PressureIn',\n",
+       "        'Min.Sea.Level.PressureIn', 'Max.VisibilityMiles',\n",
+       "        'Mean.VisibilityMiles', 'Min.VisibilityMiles', 'Max.Wind.SpeedMPH',\n",
+       "        'Mean.Wind.SpeedMPH', 'Max.Gust.SpeedMPH', 'PrecipitationIn',\n",
+       "        'CloudCover', 'Events', 'WindDirDegrees.br...', 'city', 'season'],\n",
+       "       dtype='object')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.axes"
    ]
   }
  ],
