pandas | feat: add Statistics section to dataframes notebook

--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "referenced-circumstances",
    "metadata": {},
    "outputs": [
@@ -819,7 +819,7 @@
        "[3 rows x 26 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "geological-torture",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "deadly-effects",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "liable-montreal",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "unlimited-designer",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1085,7 @@
        "4  New York City (USA)  Summer  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "extended-shuttle",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1125,7 @@
        "       dtype='object')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "under-satellite",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "funky-amount",
    "metadata": {},
    "outputs": [
@@ -1217,7 +1217,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "active-specific",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1471,7 @@
        "[6 rows x 26 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "obvious-monitoring",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1571,7 @@
        "5  1948-07-06                91               82.0                72"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "liable-performance",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1773,7 @@
        "[4 rows x 26 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,6 +1782,57 @@
     "# Rows where the maximum temperature was greater than 100 \n",
     "# and the minimum temperature was less than 90\n",
     "df.loc[(df['Max.TemperatureF'] > 100) & (df['Min.TemperatureF'] < 80)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abandoned-tiger",
+   "metadata": {},
+   "source": [
+    "The `DataFrame.max()` function returns a `Series` (usually) with the maximum values along a given axis. \n",
+    "\n",
+    "Typically you want to run this with `axis=0`, as that will go down each column and get the maximum value per column. When your columns contain hetergenous data fields, it doesn't make much sense to use `axis=1`, because that will get the maximum value across a row -- probably a nonsensical statistic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "separate-tuning",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                   24627.00\n",
+       "Max.TemperatureF               103.00\n",
+       "Mean.TemperatureF               92.00\n",
+       "Min.TemperatureF                82.00\n",
+       "Max.Dew.PointF                  81.00\n",
+       "MeanDew.PointF                  77.00\n",
+       "Min.DewpointF                   75.00\n",
+       "Max.Humidity                   100.00\n",
+       "Mean.Humidity                  100.00\n",
+       "Min.Humidity                   100.00\n",
+       "Max.Sea.Level.PressureIn        31.08\n",
+       "Mean.Sea.Level.PressureIn       31.01\n",
+       "Min.Sea.Level.PressureIn        30.96\n",
+       "Max.VisibilityMiles             20.00\n",
+       "Mean.VisibilityMiles            20.00\n",
+       "Min.VisibilityMiles             20.00\n",
+       "Max.Wind.SpeedMPH              116.00\n",
+       "Mean.Wind.SpeedMPH              41.00\n",
+       "Max.Gust.SpeedMPH              238.00\n",
+       "CloudCover                       8.00\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.max(axis=0, numeric_only=True)"
    ]
   }
  ],
