intro | updated intro notebook

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -77,6 +77,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "adult-fabric",
+   "metadata": {},
+   "source": [
+    "You can execute all cells sequentially with the Cell > Run All menu item."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "pharmaceutical-pharmaceutical",
    "metadata": {},
    "source": [
