--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "id": "heavy-sharing",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "[24560 rows x 26 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,37 +1839,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "clear-scanning",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Unnamed: 0                   12314.50\n",
-       "Max.TemperatureF                62.00\n",
-       "Mean.TemperatureF               54.00\n",
-       "Min.TemperatureF                48.00\n",
-       "Max.Dew.PointF                  50.00\n",
-       "MeanDew.PointF                  44.00\n",
-       "Min.DewpointF                   37.00\n",
-       "Max.Humidity                    89.00\n",
-       "Mean.Humidity                   68.00\n",
-       "Min.Humidity                    48.00\n",
-       "Max.Sea.Level.PressureIn        30.12\n",
-       "Mean.Sea.Level.PressureIn       30.03\n",
-       "Min.Sea.Level.PressureIn        29.93\n",
-       "Max.VisibilityMiles             15.00\n",
-       "Mean.VisibilityMiles            10.00\n",
-       "Min.VisibilityMiles              6.00\n",
-       "Max.Wind.SpeedMPH               18.00\n",
-       "Mean.Wind.SpeedMPH              10.00\n",
-       "Max.Gust.SpeedMPH               28.00\n",
-       "CloudCover                       3.00\n",
+       "Unnamed: 0                   12314.175651\n",
+       "Max.TemperatureF                60.800366\n",
+       "Mean.TemperatureF               54.122404\n",
+       "Min.TemperatureF                47.294585\n",
+       "Max.Dew.PointF                  48.544707\n",
+       "MeanDew.PointF                  42.541327\n",
+       "Min.DewpointF                   36.382858\n",
+       "Max.Humidity                    84.943689\n",
+       "Mean.Humidity                   67.912989\n",
+       "Min.Humidity                    50.012296\n",
+       "Max.Sea.Level.PressureIn        30.133378\n",
+       "Mean.Sea.Level.PressureIn       30.027763\n",
+       "Min.Sea.Level.PressureIn        29.921826\n",
+       "Max.VisibilityMiles             13.137054\n",
+       "Mean.VisibilityMiles            10.039764\n",
+       "Min.VisibilityMiles              6.306620\n",
+       "Max.Wind.SpeedMPH               19.356759\n",
+       "Mean.Wind.SpeedMPH              11.222068\n",
+       "Max.Gust.SpeedMPH               29.107404\n",
+       "CloudCover                       3.391111\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "civil-coaching",
    "metadata": {},
    "outputs": [
@@ -3171,7 +3171,7 @@
        "[26 rows x 24560 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3190,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "advisory-fireplace",
    "metadata": {},
    "outputs": [
@@ -3410,7 +3410,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3430,7 +3430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "foster-morning",
    "metadata": {},
    "outputs": [
@@ -3489,6 +3489,284 @@
   },
   {
    "cell_type": "markdown",
+   "id": "handled-sequence",
+   "metadata": {},
+   "source": [
+    "Another thing to try is to create a new column with a \"cleaner\" version of data from an existing column.\n",
+    "\n",
+    "In order to make this cell re-producible, we'll first have to drop the new column by name, if it already exists. This is accomplished by the `DataFrame.drop()` method, and we pass in an `errors` parameter of `'ignore'` so that nothing happens if the column doesn't already exist. Note that this function returns an new `DataFrame` object and does not modify the orignal, so the result has to be assigned to the existing `DataFrame` object.\n",
+    "\n",
+    "Next, we create the new clean data in a `Series` object, by grabbing everything before the HTML `<br />` tag. Our data would still be a string after this operation, so we also do a cast operation with `pandas.to_numeric()`. \n",
+    "\n",
+    "Then, we get the numerical index of the orginal column. Our goal here is to insert the new column after the original (instead of just appending it to the end). \n",
+    "\n",
+    "Finally we use the `DataFrame.insert()` operation to actually insert the new column of data.\n",
+    "\n",
+    "After all this is done, we can confirm with the `DataFrame.info()` function that a new column with just integer data now exists. Then follow it up with a call to `DataFrame.head()` to inspect the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "supposed-burton",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 24560 entries, 0 to 24559\n",
+      "Data columns (total 27 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   Unnamed: 0                 24560 non-null  int64  \n",
+      " 1   Date                       24560 non-null  object \n",
+      " 2   Max.TemperatureF           24560 non-null  int64  \n",
+      " 3   Mean.TemperatureF          24558 non-null  float64\n",
+      " 4   Min.TemperatureF           24560 non-null  int64  \n",
+      " 5   Max.Dew.PointF             24560 non-null  int64  \n",
+      " 6   MeanDew.PointF             24560 non-null  int64  \n",
+      " 7   Min.DewpointF              24560 non-null  int64  \n",
+      " 8   Max.Humidity               24560 non-null  int64  \n",
+      " 9   Mean.Humidity              24560 non-null  int64  \n",
+      " 10  Min.Humidity               24560 non-null  int64  \n",
+      " 11  Max.Sea.Level.PressureIn   24560 non-null  float64\n",
+      " 12  Mean.Sea.Level.PressureIn  24560 non-null  float64\n",
+      " 13  Min.Sea.Level.PressureIn   24560 non-null  float64\n",
+      " 14  Max.VisibilityMiles        24545 non-null  float64\n",
+      " 15  Mean.VisibilityMiles       24545 non-null  float64\n",
+      " 16  Min.VisibilityMiles        24545 non-null  float64\n",
+      " 17  Max.Wind.SpeedMPH          24560 non-null  int64  \n",
+      " 18  Mean.Wind.SpeedMPH         24560 non-null  int64  \n",
+      " 19  Max.Gust.SpeedMPH          9022 non-null   float64\n",
+      " 20  PrecipitationIn            24560 non-null  object \n",
+      " 21  CloudCover                 21779 non-null  float64\n",
+      " 22  Events                     11721 non-null  object \n",
+      " 23  WindDirDegrees.br...       24560 non-null  object \n",
+      " 24  WindDirDegrees             24560 non-null  int64  \n",
+      " 25  city                       24560 non-null  object \n",
+      " 26  season                     24560 non-null  object \n",
+      "dtypes: float64(9), int64(12), object(6)\n",
+      "memory usage: 5.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop the column if it exists\n",
+    "new_col_name = 'WindDirDegrees'\n",
+    "old_col_name = 'WindDirDegrees.br...'\n",
+    "df = df.drop([new_col_name], axis=1, errors='ignore')\n",
+    "\n",
+    "# Remove the extraneous HTML formatting from the column values\n",
+    "# Then cast all the data to a numerical value\n",
+    "cleaned_wind_degrees = df[old_col_name].map(lambda w: w.split('<br />')[0])\n",
+    "cleaned_wind_degrees = pd.to_numeric(cleaned_wind_degrees, errors='coerce')\n",
+    "\n",
+    "# Get the original column number\n",
+    "old_col_location = df.columns.get_loc(old_col_name)\n",
+    "\n",
+    "# Add a new column after the original\n",
+    "df.insert(loc=old_col_location+1, column=new_col_name, value=cleaned_wind_degrees)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "unauthorized-trading",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Max.TemperatureF</th>\n",
+       "      <th>Mean.TemperatureF</th>\n",
+       "      <th>Min.TemperatureF</th>\n",
+       "      <th>Max.Dew.PointF</th>\n",
+       "      <th>MeanDew.PointF</th>\n",
+       "      <th>Min.DewpointF</th>\n",
+       "      <th>Max.Humidity</th>\n",
+       "      <th>Mean.Humidity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Max.Wind.SpeedMPH</th>\n",
+       "      <th>Mean.Wind.SpeedMPH</th>\n",
+       "      <th>Max.Gust.SpeedMPH</th>\n",
+       "      <th>PrecipitationIn</th>\n",
+       "      <th>CloudCover</th>\n",
+       "      <th>Events</th>\n",
+       "      <th>WindDirDegrees.br...</th>\n",
+       "      <th>WindDirDegrees</th>\n",
+       "      <th>city</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1948-07-01</td>\n",
+       "      <td>84</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>71</td>\n",
+       "      <td>65</td>\n",
+       "      <td>58</td>\n",
+       "      <td>93</td>\n",
+       "      <td>65</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fog</td>\n",
+       "      <td>264&lt;br /&gt;</td>\n",
+       "      <td>264</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1948-07-02</td>\n",
+       "      <td>82</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>63</td>\n",
+       "      <td>62</td>\n",
+       "      <td>53</td>\n",
+       "      <td>49</td>\n",
+       "      <td>76</td>\n",
+       "      <td>51</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>315&lt;br /&gt;</td>\n",
+       "      <td>315</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1948-07-03</td>\n",
+       "      <td>78</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>66</td>\n",
+       "      <td>58</td>\n",
+       "      <td>53</td>\n",
+       "      <td>84</td>\n",
+       "      <td>62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>203&lt;br /&gt;</td>\n",
+       "      <td>203</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1948-07-04</td>\n",
+       "      <td>84</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>63</td>\n",
+       "      <td>56</td>\n",
+       "      <td>90</td>\n",
+       "      <td>67</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fog</td>\n",
+       "      <td>198&lt;br /&gt;</td>\n",
+       "      <td>198</td>\n",
+       "      <td>New York City (USA)</td>\n",
+       "      <td>Summer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0        Date  Max.TemperatureF  Mean.TemperatureF  \\\n",
+       "0           1  1948-07-01                84               78.0   \n",
+       "1           2  1948-07-02                82               72.0   \n",
+       "2           3  1948-07-03                78               71.0   \n",
+       "3           4  1948-07-04                84               76.0   \n",
+       "\n",
+       "   Min.TemperatureF  Max.Dew.PointF  MeanDew.PointF  Min.DewpointF  \\\n",
+       "0                72              71              65             58   \n",
+       "1                63              62              53             49   \n",
+       "2                64              66              58             53   \n",
+       "3                68              68              63             56   \n",
+       "\n",
+       "   Max.Humidity  Mean.Humidity  ...  Max.Wind.SpeedMPH  Mean.Wind.SpeedMPH  \\\n",
+       "0            93             65  ...                 16                   8   \n",
+       "1            76             51  ...                 16                  10   \n",
+       "2            84             62  ...                 14                   6   \n",
+       "3            90             67  ...                 12                   5   \n",
+       "\n",
+       "   Max.Gust.SpeedMPH  PrecipitationIn  CloudCover  Events  \\\n",
+       "0                NaN             0.00         0.0     Fog   \n",
+       "1                NaN             0.00         0.0     NaN   \n",
+       "2                NaN             0.00         0.0     NaN   \n",
+       "3                NaN             0.00         0.0     Fog   \n",
+       "\n",
+       "   WindDirDegrees.br...  WindDirDegrees                 city  season  \n",
+       "0             264<br />             264  New York City (USA)  Summer  \n",
+       "1             315<br />             315  New York City (USA)  Summer  \n",
+       "2             203<br />             203  New York City (USA)  Summer  \n",
+       "3             198<br />             198  New York City (USA)  Summer  \n",
+       "\n",
+       "[4 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(n=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "upset-success",
    "metadata": {},
    "source": [
@@ -3503,7 +3781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "lovely-input",
    "metadata": {},
    "outputs": [
@@ -3533,7 +3811,7 @@
       "    \"Max.Wind.SpeedMPH\":16,\n",
       "    \"Mean.Wind.SpeedMPH\":8,\n",
       "    \"Max.Gust.SpeedMPH\":null,\n",
-      "    \"PrecipitationIn\":\"0.00\",\n",
+      "    \"PrecipitationIn\":0.0,\n",
       "    \"CloudCover\":0.0,\n",
       "    \"Events\":\"Fog\",\n",
       "    \"WindDirDegrees.br...\":\"264<br \\/>\",\n",
@@ -3561,7 +3839,7 @@
       "    \"Max.Wind.SpeedMPH\":16,\n",
       "    \"Mean.Wind.SpeedMPH\":10,\n",
       "    \"Max.Gust.SpeedMPH\":null,\n",
-      "    \"PrecipitationIn\":\"0.00\",\n",
+      "    \"PrecipitationIn\":0.0,\n",
       "    \"CloudCover\":0.0,\n",
       "    \"Events\":null,\n",
       "    \"WindDirDegrees.br...\":\"315<br \\/>\",\n",
@@ -3589,7 +3867,7 @@
       "    \"Max.Wind.SpeedMPH\":14,\n",
       "    \"Mean.Wind.SpeedMPH\":6,\n",
       "    \"Max.Gust.SpeedMPH\":null,\n",
-      "    \"PrecipitationIn\":\"0.00\",\n",
+      "    \"PrecipitationIn\":0.0,\n",
       "    \"CloudCover\":0.0,\n",
       "    \"Events\":null,\n",
       "    \"WindDirDegrees.br...\":\"203<br \\/>\",\n",
