pandas | add section on diff between Series and DataFrame

--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -12,6 +12,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "circular-columbia",
+   "metadata": {},
+   "source": [
+    "## DataFrames vs. Series\n",
+    "\n",
+    "Where a `DataFrame` is a tabular format of representing data, a `Series` is one-dimensional. You can think of a `Series` in many cases as being a single row or single column's worth of data. That is, [a `DataFrame` is a collection of `Series` objects](https://stackoverflow.com/a/26240208/1577649).\n",
+    "\n",
+    "In data analysis with `pandas` we're mostly concerned with `DataFrame` objects, but you'll see `Series` objects regularly as you operate on individual rows and columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "stuck-reduction",
    "metadata": {},
    "source": [
@@ -3489,7 +3501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-sequence",
+   "id": "lyric-cooling",
    "metadata": {},
    "source": [
     "Another thing to try is to create a new column with a \"cleaner\" version of data from an existing column.\n",
@@ -3508,7 +3520,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "supposed-burton",
+   "id": "composed-luther",
    "metadata": {},
    "outputs": [
     {
@@ -3573,7 +3585,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "unauthorized-trading",
+   "id": "identified-government",
    "metadata": {},
    "outputs": [
     {
