--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "id": "heavy-sharing",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "[24560 rows x 26 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "id": "industrial-proxy",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "[4 rows x 26 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "referenced-circumstances",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
        "[3 rows x 26 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "geological-torture",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "deadly-effects",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "liable-montreal",
    "metadata": {},
    "outputs": [
@@ -987,7 +987,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "unlimited-designer",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
        "4  New York City (USA)  Summer  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "extended-shuttle",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "       dtype='object')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "id": "under-satellite",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "id": "funky-amount",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "id": "active-specific",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
        "[6 rows x 26 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "id": "obvious-monitoring",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1583,7 @@
        "5  1948-07-06                91               82.0                72"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "id": "liable-performance",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1785,7 @@
        "[4 rows x 26 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "undefined-administration",
    "metadata": {},
    "outputs": [
@@ -1840,7 +1840,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "clear-scanning",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1881,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "id": "dominant-warehouse",
    "metadata": {},
    "outputs": [
@@ -2200,7 +2200,7 @@
        "max           116.000000           41.000000         238.000000      8.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,12 +2216,14 @@
    "source": [
     "## Additional Functions\n",
     "\n",
+    "### Transposing\n",
+    "\n",
     "The `DataFrame.transpose()` method returns a new `DataFrame` with the rows and columns flipped."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "civil-coaching",
    "metadata": {},
    "outputs": [
@@ -3183,7 +3185,7 @@
        "[26 rows x 24560 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3197,12 +3199,14 @@
    "id": "photographic-syndication",
    "metadata": {},
    "source": [
+    "### Sorting by Column \n",
+    "\n",
     "Use the `DataFrame.nlargest()` method to receive `n` rows sorted by the specified `columns`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "id": "advisory-fireplace",
    "metadata": {},
    "outputs": [
@@ -3422,7 +3426,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3437,12 +3441,14 @@
    "id": "smaller-visit",
    "metadata": {},
    "source": [
+    "### Casting to Numeric Type\n",
+    "\n",
     "The `pandas.to_numeric()` function is useful for converting a column of data that may have been the wrong type initially."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "id": "foster-morning",
    "metadata": {},
    "outputs": [
@@ -3504,6 +3510,8 @@
    "id": "lyric-cooling",
    "metadata": {},
    "source": [
+    "### Adding a Column with Cleaner Data\n",
+    "\n",
     "Another thing to try is to create a new column with a \"cleaner\" version of data from an existing column.\n",
     "\n",
     "In order to make this cell re-producible, we'll first have to drop the new column by name, if it already exists. This is accomplished by the `DataFrame.drop()` method, and we pass in an `errors` parameter of `'ignore'` so that nothing happens if the column doesn't already exist. Note that this function returns an new `DataFrame` object and does not modify the orignal, so the result has to be assigned to the existing `DataFrame` object.\n",
@@ -3522,48 +3530,7 @@
    "execution_count": 65,
    "id": "composed-luther",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 24560 entries, 0 to 24559\n",
-      "Data columns (total 27 columns):\n",
-      " #   Column                     Non-Null Count  Dtype  \n",
-      "---  ------                     --------------  -----  \n",
-      " 0   Unnamed: 0                 24560 non-null  int64  \n",
-      " 1   Date                       24560 non-null  object \n",
-      " 2   Max.TemperatureF           24560 non-null  int64  \n",
-      " 3   Mean.TemperatureF          24558 non-null  float64\n",
-      " 4   Min.TemperatureF           24560 non-null  int64  \n",
-      " 5   Max.Dew.PointF             24560 non-null  int64  \n",
-      " 6   MeanDew.PointF             24560 non-null  int64  \n",
-      " 7   Min.DewpointF              24560 non-null  int64  \n",
-      " 8   Max.Humidity               24560 non-null  int64  \n",
-      " 9   Mean.Humidity              24560 non-null  int64  \n",
-      " 10  Min.Humidity               24560 non-null  int64  \n",
-      " 11  Max.Sea.Level.PressureIn   24560 non-null  float64\n",
-      " 12  Mean.Sea.Level.PressureIn  24560 non-null  float64\n",
-      " 13  Min.Sea.Level.PressureIn   24560 non-null  float64\n",
-      " 14  Max.VisibilityMiles        24545 non-null  float64\n",
-      " 15  Mean.VisibilityMiles       24545 non-null  float64\n",
-      " 16  Min.VisibilityMiles        24545 non-null  float64\n",
-      " 17  Max.Wind.SpeedMPH          24560 non-null  int64  \n",
-      " 18  Mean.Wind.SpeedMPH         24560 non-null  int64  \n",
-      " 19  Max.Gust.SpeedMPH          9022 non-null   float64\n",
-      " 20  PrecipitationIn            24560 non-null  object \n",
-      " 21  CloudCover                 21779 non-null  float64\n",
-      " 22  Events                     11721 non-null  object \n",
-      " 23  WindDirDegrees.br...       24560 non-null  object \n",
-      " 24  WindDirDegrees             24560 non-null  int64  \n",
-      " 25  city                       24560 non-null  object \n",
-      " 26  season                     24560 non-null  object \n",
-      "dtypes: float64(9), int64(12), object(6)\n",
-      "memory usage: 5.1+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop the column if it exists\n",
     "new_col_name = 'WindDirDegrees'\n",
@@ -3649,7 +3616,7 @@
        "      <td>16</td>\n",
        "      <td>8</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Fog</td>\n",
        "      <td>264&lt;br /&gt;</td>\n",
@@ -3673,7 +3640,7 @@
        "      <td>16</td>\n",
        "      <td>10</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>315&lt;br /&gt;</td>\n",
@@ -3697,7 +3664,7 @@
        "      <td>14</td>\n",
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>203&lt;br /&gt;</td>\n",
@@ -3721,7 +3688,7 @@
        "      <td>12</td>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Fog</td>\n",
        "      <td>198&lt;br /&gt;</td>\n",
@@ -3754,10 +3721,10 @@
        "3            90             67  ...                 12                   5   \n",
        "\n",
        "   Max.Gust.SpeedMPH  PrecipitationIn  CloudCover  Events  \\\n",
-       "0                NaN             0.00         0.0     Fog   \n",
-       "1                NaN             0.00         0.0     NaN   \n",
-       "2                NaN             0.00         0.0     NaN   \n",
-       "3                NaN             0.00         0.0     Fog   \n",
+       "0                NaN              0.0         0.0     Fog   \n",
+       "1                NaN              0.0         0.0     NaN   \n",
+       "2                NaN              0.0         0.0     NaN   \n",
+       "3                NaN              0.0         0.0     Fog   \n",
        "\n",
        "   WindDirDegrees.br...  WindDirDegrees                 city  season  \n",
        "0             264<br />             264  New York City (USA)  Summer  \n",
@@ -3793,7 +3760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "id": "lovely-input",
    "metadata": {},
    "outputs": [
@@ -3827,6 +3794,7 @@
       "    \"CloudCover\":0.0,\n",
       "    \"Events\":\"Fog\",\n",
       "    \"WindDirDegrees.br...\":\"264<br \\/>\",\n",
+      "    \"WindDirDegrees\":264,\n",
       "    \"city\":\"New York City (USA)\",\n",
       "    \"season\":\"Summer\"\n",
       "  },\n",
@@ -3855,6 +3823,7 @@
       "    \"CloudCover\":0.0,\n",
       "    \"Events\":null,\n",
       "    \"WindDirDegrees.br...\":\"315<br \\/>\",\n",
+      "    \"WindDirDegrees\":315,\n",
       "    \"city\":\"New York City (USA)\",\n",
       "    \"season\":\"Summer\"\n",
       "  },\n",
@@ -3883,6 +3852,7 @@
       "    \"CloudCover\":0.0,\n",
       "    \"Events\":null,\n",
       "    \"WindDirDegrees.br...\":\"203<br \\/>\",\n",
+      "    \"WindDirDegrees\":203,\n",
       "    \"city\":\"New York City (USA)\",\n",
       "    \"season\":\"Summer\"\n",
       "  }\n",
