--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -5,7 +5,7 @@
    "id": "continent-glance",
    "metadata": {},
    "source": [
-    "# Pandas Dataframes\n",
+    "# Pandas DataFrames\n",
     "\n",
     "The `pandas.DataFrame` class is used to represent data in a 2D tabular format. It's useful for manipulating data in a spreadsheet or CSV file."
    ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "heavy-sharing",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "[24560 rows x 26 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "industrial-proxy",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "[4 rows x 26 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "referenced-circumstances",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
        "[3 rows x 26 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "geological-torture",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "deadly-effects",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "liable-montreal",
    "metadata": {},
    "outputs": [
@@ -987,7 +987,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "unlimited-designer",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
        "4  New York City (USA)  Summer  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "extended-shuttle",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "       dtype='object')]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "under-satellite",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "funky-amount",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "active-specific",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
        "[6 rows x 26 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "id": "obvious-monitoring",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1583,7 @@
        "5  1948-07-06                91               82.0                72"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "liable-performance",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1785,7 @@
        "[4 rows x 26 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "undefined-administration",
    "metadata": {},
    "outputs": [
@@ -1840,7 +1840,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "clear-scanning",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1881,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "dominant-warehouse",
    "metadata": {},
    "outputs": [
@@ -2200,7 +2200,7 @@
        "max           116.000000           41.000000         238.000000      8.000000  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "civil-coaching",
    "metadata": {},
    "outputs": [
@@ -3185,7 +3185,7 @@
        "[26 rows x 24560 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3206,7 +3206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "advisory-fireplace",
    "metadata": {},
    "outputs": [
@@ -3426,7 +3426,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3448,7 +3448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "foster-morning",
    "metadata": {},
    "outputs": [
@@ -3527,7 +3527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "id": "composed-luther",
    "metadata": {},
    "outputs": [],
@@ -3551,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "identified-government",
    "metadata": {},
    "outputs": [
@@ -3735,7 +3735,7 @@
        "[4 rows x 27 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3760,7 +3760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "lovely-input",
    "metadata": {},
    "outputs": [
