intro | add examples of pulling up help docs and magic commands

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "prime-pottery",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,110 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# When opening a notebook, all the cells need to be re-executed in the same order to produce the same results"
+    "# When opening a notebook, all the cells need to be re-executed in the same order to produce the same resultsbb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conservative-research",
+   "metadata": {},
+   "source": [
+    "## Viewing Documentation\n",
+    "\n",
+    "Suffixing a function with the question mark `?` will bring up the help documentation. You can close this after you are done reading by clicking the X in the corner.\n",
+    "\n",
+    "In the example below, we import the `json` package and pull up the documentatation for the `dumps()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "advisory-lender",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "json.dumps?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "portable-penalty",
+   "metadata": {},
+   "source": [
+    "## Magic Commands\n",
+    "\n",
+    "Magic commands, are just what they sound like. They are commands that are not part of core Python, but are added in by the interpretter to add \"magical\" functionality. They are usually prefixed with the percent character `%`.\n",
+    "\n",
+    "In the example below, we run the magic command `%ls` to view the current directory contents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "sorted-desire",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md                      dataframes.ipynb\r\n",
+      "\u001b[34mdata\u001b[m\u001b[m/                          intro.ipynb\r\n",
+      "dataframe_visualization.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "congressional-criterion",
+   "metadata": {},
+   "source": [
+    "Another useful magic command is the `%who` function that can list currently defined variables.\n",
+    "\n",
+    "In addition, the `%whos` command lists those same variables with additional information like their type and values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "collaborative-penguin",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Currently defined variables:\n",
+      "json\t x\t \n",
+      "\n",
+      "Currently defined variables and their values:\n",
+      "Variable   Type      Data/Info\n",
+      "------------------------------\n",
+      "json       module    <module 'json' from '/Lib<...>hon3.8/json/__init__.py'>\n",
+      "x          int       42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Currently defined variables:')\n",
+    "%who\n",
+    "\n",
+    "print('\\nCurrently defined variables and their values:')\n",
+    "%whos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "missing-textbook",
+   "metadata": {},
+   "source": [
+    "Consult [the documentation](https://ipython.readthedocs.io/en/stable/interactive/magics.html) for more useful commands."
    ]
   },
   {
