intro | rearrange some cells in intro.ipynb

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -67,21 +67,11 @@
    "id": "utility-world",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# To make interactive plots, uncomment this\n",
-    "# %matplotlib notebook\n",
-    "\n",
-    "# Import the numpy and matplotlib modules to be used below\n",
-    "# This assumes you have installed the libraries already\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# When opening a notebook, all the cells need to be re-executed in the same order to produce the same resultsbb"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-research",
+   "id": "thousand-george",
    "metadata": {},
    "source": [
     "## Viewing Documentation\n",
@@ -94,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "advisory-lender",
+   "id": "irish-mississippi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portable-penalty",
+   "id": "alert-premium",
    "metadata": {},
    "source": [
     "## Magic Commands\n",
@@ -118,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sorted-desire",
+   "id": "dominican-techno",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "congressional-criterion",
+   "id": "corrected-century",
    "metadata": {},
    "source": [
     "Another useful magic command is the `%who` function that can list currently defined variables.\n",
@@ -148,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "collaborative-penguin",
+   "id": "comparative-pointer",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "missing-textbook",
+   "id": "rough-training",
    "metadata": {},
    "source": [
     "Consult [the documentation](https://ipython.readthedocs.io/en/stable/interactive/magics.html) for more useful commands."
@@ -189,6 +179,30 @@
    "source": [
     "## Simple Plots\n",
     "\n",
+    "A notebook can contain visual graphs of data using libraries like Seaborn or Matplotlib. The examples below illustrate some simple plots with Matplot lib. In order to be able to import the libraries `numpy` and `matplotlib` you must have them installed in your Python distribution.\n",
+    "\n",
+    "Most notebooks contain multiple code cells, that often build on each other or at least reference variables/data from other cells. That is why, before running a cell, you should make sure all the previous cells have been executed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "minute-break",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To make interactive plots, uncomment this\n",
+    "# %matplotlib notebook\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "collect-while",
+   "metadata": {},
+   "source": [
     "The `randint()` function returns an array of integers from a uniform distribution. Displaying this in a histogram, we should get a relatively flat graph with nearly equal numbers in each bucket. Recall, that a histogram shows the frequency of occurances.\n",
     "\n",
     "All the parameters for the `hist()` function can be found [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist)."
