intro | rearrange some cells in intro.ipynb

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -62,29 +62,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "utility-world",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "thousand-george",
+   "id": "elect-beaver",
    "metadata": {},
    "source": [
     "## Viewing Documentation\n",
     "\n",
     "Suffixing a function with the question mark `?` will bring up the help documentation. You can close this after you are done reading by clicking the X in the corner.\n",
     "\n",
-    "In the example below, we import the `json` package and pull up the documentatation for the `dumps()` function."
+    "In the example below, we import the `json` package and pull up the documentatation for the `dumps` function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "irish-mississippi",
+   "id": "processed-musician",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alert-premium",
+   "id": "collected-regression",
    "metadata": {},
    "source": [
     "## Magic Commands\n",
@@ -108,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dominican-techno",
+   "id": "efficient-basement",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corrected-century",
+   "id": "referenced-clear",
    "metadata": {},
    "source": [
     "Another useful magic command is the `%who` function that can list currently defined variables.\n",
@@ -138,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "comparative-pointer",
+   "id": "thermal-singing",
    "metadata": {},
    "outputs": [
     {
@@ -166,10 +158,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rough-training",
+   "id": "frozen-concentration",
    "metadata": {},
    "source": [
-    "Consult [the documentation](https://ipython.readthedocs.io/en/stable/interactive/magics.html) for more useful commands."
+    "Consult [the IPython documentation](https://ipython.readthedocs.io/en/stable/interactive/magics.html) for more useful magic commands."
    ]
   },
   {
@@ -181,13 +173,13 @@
     "\n",
     "A notebook can contain visual graphs of data using libraries like Seaborn or Matplotlib. The examples below illustrate some simple plots with Matplot lib. In order to be able to import the libraries `numpy` and `matplotlib` you must have them installed in your Python distribution.\n",
     "\n",
-    "Most notebooks contain multiple code cells, that often build on each other or at least reference variables/data from other cells. That is why, before running a cell, you should make sure all the previous cells have been executed "
+    "Most notebooks contain multiple code cells, that often build on each other or at least reference variables/data from other cells. That is why, before running a cell, you should make sure all the previous cells have been executed in order."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minute-break",
+   "id": "vocational-simulation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collect-while",
+   "id": "romantic-nigeria",
    "metadata": {},
    "source": [
     "The `randint()` function returns an array of integers from a uniform distribution. Displaying this in a histogram, we should get a relatively flat graph with nearly equal numbers in each bucket. Recall, that a histogram shows the frequency of occurances.\n",
